fixed side pane

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -286,7 +286,8 @@ h4, .h4 {
   margin-right: 1.26582%;
   box-sizing: border-box;
   position: fixed;
-  height: 100%;
+  bottom: 0;
+  top: 3em;
   overflow-y: auto; }
 
 #cards {
