remove the buy link

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -287,7 +287,7 @@ h4, .h4 {
   box-sizing: border-box;
   position: fixed;
   bottom: 0;
-  top: 3em;
+  top: 0;
   overflow-y: auto; }
 
 #cards {
